<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:alpha="0"
        android:background="@drawable/question_box"
        android:padding="64dp"
        android:text="@string/eighth_question"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/tv_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_huge"
        android:alpha="0"
        android:scaleX="0"
        android:scaleY="0"
        android:background="@drawable/answer_transition"
        android:padding="30dp"
        android:text="@string/eighth_question_answer_a"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tv_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_huge"
        android:alpha="0"
        android:scaleX="0"
        android:scaleY="0"
        android:background="@drawable/answer_transition"
        android:padding="30dp"
        android:text="@string/eighth_question_answer_b"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="32dp" />

</LinearLayout>


