<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--<TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="Pierwsze pytanie"
        android:textSize="@dimen/font_huge"
        android:textColor="@color/primary_text"
        android:textAlignment="center"
        />-->

    <TextView
        android:id="@+id/tv_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="50dp"
        android:alpha="0"
        android:background="@drawable/question_box"
        android:paddingBottom="64dp"
        android:paddingTop="64dp"
        android:text="@string/second_question"
        android:textAlignment="center"
        android:textColor="@color/secondary_text"
        android:textSize="40dp" />

    <!--<Button-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:text="@string/second_question_answer_a"-->
    <!--style="@style/Widget.AppCompat.Button.Colored"-->
    <!--android:layout_marginTop="@dimen/spacing_huge"-->
    <!--android:layout_marginLeft="@dimen/activity_horizontal_margin"-->
    <!--android:layout_marginRight="@dimen/activity_horizontal_margin"-->
    <!--android:textSize="32dp"-->
    <!--android:padding="30dp"-->
    <!--android:textAllCaps="false"/>-->

    <TextView
        android:id="@+id/tv_a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@drawable/answer_transition"
        android:padding="30dp"
        android:alpha="0"
        android:text="@string/second_question_answer_a"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="32dp" />

    <TextView
        android:id="@+id/tv_b"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@drawable/answer_transition"
        android:padding="30dp"
        android:alpha="0"
        android:text="@string/second_question_answer_b"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="32dp" />


    <TextView
        android:id="@+id/tv_c"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/spacing_huge"
        android:background="@drawable/answer_transition"
        android:padding="30dp"
        android:alpha="0"
        android:text="@string/second_question_answer_c"
        android:textAlignment="center"
        android:textColor="@color/primary_text"
        android:textSize="32dp" />

    <Button
        android:id="@+id/btn_finishQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/spacing_huge"
        android:alpha="0"
        android:onClick="onFinishQuizClicked"
        android:scaleX="0"
        android:scaleY="0"
        android:text="Zakończ Quiz"
        android:textSize="@dimen/font_large" />


</LinearLayout>


